# data-structures-project

./: .gitignore  README.md  pyproject.toml
homework-1/: main.py
homework-2/: README.md  main.py
homework-3/: main.py
homework-4/: main.py
homework-5/: main.py
homework-6/: main.py
src/: linked_list.py  queue.py  stack.py
tests/: test_linked_list.py  test_queue.py  test_stack.py
