[tool.poetry]
name = "data-structures-project"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "data_structures_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.lint.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
